// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Aside Controlled mode 1`] = `
<portal>
  <aside
    data-ts="Aside"
    data-ts.busy={undefined}
    data-ts.open={false}
    data-ts.title="Aside demo"
  >
    <div
      data-ts="Panel"
    >
      <menu
        data-ts="Menu"
      >
        <li
          className=""
        >
          <button
            disabled={false}
          >
            <span>
              Menu item
            </span>
          </button>
        </li>
      </menu>
    </div>
  </aside>
</portal>
`;

exports[`Form Basic structure 1`] = `
<form
  data-ts="Form"
/>
`;

exports[`Form FormInput 1`] = `
<form
  data-ts="Form"
>
  <h3>
    No label
  </h3>
  <fieldset>
    <label>
      <input
        label={undefined}
        onChange={[Function]}
        type="text"
      />
    </label>
  </fieldset>
  <h3>
    With label
  </h3>
  <fieldset>
    <label>
      <span>
        Text input with label
      </span>
      <input
        label="Text input with label"
        onChange={[Function]}
        type="text"
      />
    </label>
  </fieldset>
  <h3>
    Email
  </h3>
  <fieldset>
    <label>
      <span>
        Email input
      </span>
      <input
        label="Email input"
        onChange={[Function]}
        type="email"
      />
    </label>
  </fieldset>
  <h3>
    Number
  </h3>
  <fieldset>
    <label>
      <span>
        Number input
      </span>
      <input
        label="Number input"
        onChange={[Function]}
        type="number"
      />
    </label>
  </fieldset>
  <h3>
    Tel
  </h3>
  <fieldset>
    <label>
      <span>
        Tel input
      </span>
      <input
        label="Tel input"
        onChange={[Function]}
        type="tel"
      />
    </label>
  </fieldset>
</form>
`;

exports[`Form FormSwitch 1`] = `
<form
  data-ts="Form"
>
  <fieldset>
    <span>
      Controlled mode
    </span>
    <label
      htmlFor="switch-one"
    >
      <span>
        Switch one
      </span>
      <input
        checked={true}
        defaultChecked={undefined}
        disabled={false}
        id="switch-one"
        name=""
        onChange={[Function]}
        type="checkbox"
        value={undefined}
      />
    </label>
  </fieldset>
  <fieldset>
    <span>
      Uncontrolled mode
    </span>
    <label
      htmlFor="switch-two"
    >
      <span>
        Switch two
      </span>
      <input
        checked={undefined}
        defaultChecked={true}
        disabled={false}
        id="switch-two"
        name=""
        onChange={[Function]}
        type="checkbox"
        value={undefined}
      />
    </label>
  </fieldset>
</form>
`;

exports[`Menu Basic usage 1`] = `
<menu
  data-ts="Menu"
>
  <li
    className="ts-checked"
  >
    <button
      disabled={false}
    >
      <span>
        Menu item 1
      </span>
      <i
        className="ts-icon-checked"
      />
    </button>
  </li>
  <li
    className=""
  >
    <button
      disabled={false}
    >
      <span>
        Menu item 2
      </span>
    </button>
  </li>
</menu>
`;

exports[`Modal Controlled mode 1`] = `
<portal>
  <dialog
    data-ts="Modal"
    data-ts.open={false}
    data-ts.title="Fullscreen Modal demo"
  >
    <div
      data-ts="Panel"
    >
      <main
        data-ts="Main"
      >
        <h1>
          A Modal Example
        </h1>
        <p>
          …
        </p>
        <p>
          <button
            className="ts-primary"
            onClick={[Function]}
          >
            <span>
              Close the Modal
            </span>
          </button>
        </p>
      </main>
    </div>
  </dialog>
</portal>
`;

exports[`Note Basic usage 1`] = `null`;

exports[`StatusBar Hide bar 1`] = `null`;

exports[`StatusBar Show buttons 1`] = `null`;

exports[`StatusBar Show message 1`] = `null`;

exports[`TsLogo Basic usage 1`] = `
<svg
  className="ts-logo"
  viewBox="0 0 161 109"
>
  <path
    d="M72.5 1h-70C1 1 0 1.6 0 3v18c0 .8.5 1.6 1.4 2 .3 0 .7 0 1 .2H45v83c0 1.3 1 2.2 2.4 2.2h25c1.4 0 2.4-1 2.4-2.2V3c0-1.3-1-2-2.3-2m86 0h-70C87 1 86 1.8 86 3v103.4c0 1.3 1 2 2.4 2h25c1.4 0 2.4-.8 2.4-2v-83h42.6c.4 0 .7 0 1-.2 1-.3 1.4-1 1.4-2v-18c0-1.3-1-2.2-2.3-2.2"
    fillRule="evenodd"
  />
</svg>
`;
